fix small screen values. h1, mobile menu icon, some other small shifts

--- a/Sass/base/_base.scss
+++ b/Sass/base/_base.scss
@@ -12,7 +12,12 @@ a:visited {
 
 @media only screen and (max-width: $mediumscreen) {
   iframe{
-    width: 80vw;
-    margin-left: -10vw;
-  }  
+    width: 100%;
+    height: auto;
+    margin-left: 1%;
+
+  } 
+}
+
+@media only screen and (max-width: $smallscreen) {
 }
