--- a/Sass/layout/_header.scss
+++ b/Sass/layout/_header.scss
@@ -74,7 +74,7 @@ header {
   height: 3px;
   background-color: black;
   border: 1px solid black;
-  border-radius: 10%;
+  border-radius: 30%;
   opacity: 1;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
@@ -88,20 +88,20 @@ header {
 
 #nav-icon3 span:nth-child(1) {
   top: 5px;
-  width: 100%;
+  width: 95%;
   left: 0%;
 }
 
 #nav-icon3 span:nth-child(2),
 #nav-icon3 span:nth-child(3) {
   top: 18px;
-  width: 100%;
+  width: 95%;
   left: 0%;
 }
 
 #nav-icon3 span:nth-child(4) {
   top: 32px;
-  width: 100%;
+  width: 95%;
   left: 0%;
 }
 
@@ -229,16 +229,17 @@ header {
   }
 
   span {
-    padding-left: 0px;
+ 
   }
   #span1 {
-    padding-right: 0px;
+
   }
   #span2 {
-    padding-right: 0px;
+ 
   }
   #nav-icon3 {
     display: inline;
+
 
   }
 }
