--- a/Sass/pages/_contact.scss
+++ b/Sass/pages/_contact.scss
@@ -45,4 +45,6 @@
   }
 }
 @media only screen and (max-width: $smallscreen) {
+  h1{
+  }
 }
