--- a/Sass/pages/_home.scss
+++ b/Sass/pages/_home.scss
@@ -56,10 +56,18 @@
 @media only screen and (max-width: $smallscreen) {
   #home {
 
-margin-top: 15%;
+margin-top: 0;
+
+h2{
+  font-size: 30px;
+}
+
+p{
+  width: 90%;
+}
 
 h1{
-  width: 80%;
+  font-size: 60px;
 }
 
     .homeButtonsContainer{
